// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractCritical returns static css 1`] = `
{
  "css": "@font-face {
  font-family: 'Patrick Hand SC';
  font-style: normal;
  font-weight: 400;
  src: local('Patrick Hand SC'),local('PatrickHandSC-Regular'),url(https://fonts.gstatic.com/s/patrickhandsc/v4/OYFWCgfCR-7uHIovjUZXsZ71Uis0Qeb9Gqo8IZV7ckE.woff2) format('woff2');
  unicode-range: U+0100-024f,U+1-1eff,U+20a0-20ab,U+20ad-20cf,U+2c60-2c7f,U+A720-A7FF;
}

@keyframes animation-i9f7qw-bounce {
  from, 20%, 53%, 80%, to {
    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    transform: translate3d(0, 0, 0);
  }

  40%, 43% {
    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
    transform: translate3d(0, -30px, 0);
  }

  70% {
    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
    transform: translate3d(0, -15px, 0);
  }

  90% {
    transform: translate3d(0, -4px, 0);
  }
}

.no-prefix {
  display: flex;
  justify-content: center;
}

.css-fgjrlg-hoverStyles-Something_Main {
  color: hotpink;
  display: flex;
}

.css-fgjrlg-hoverStyles-Something_Main:hover {
  color: white;
  background-color: lightgray;
  border-color: aqua;
  box-shadow: -15px -15px 0 0 aqua,-30px -30px 0 0 cornflowerblue;
}

.css-1h1w8ez-Image {
  animation: animation-i9f7qw-bounce;
  border-radius: 50%;
  height: 50px;
  width: 50px;
  background-color: red;
}",
  "html": <main class="css-fgjrlg-hoverStyles-Something_Main">
  <img size="30"
       class="css-1h1w8ez-Image"
  >
  <img size="100"
       class="css-1h1w8ez-Image"
  >
  <img class="css-1h1w8ez-Image">
</main>,
  "ids": [
    "1uqawbr",
    "i9f7qw-bounce",
    "1nhdffy",
    "fgjrlg-hoverStyles-Something_Main",
    "1h1w8ez-Image",
  ],
}
`;

exports[`extractCritical returns static css 2`] = `
{
  "css": "@font-face {
  font-family: 'Patrick Hand SC';
  font-style: normal;
  font-weight: 400;
  src: local('Patrick Hand SC'),local('PatrickHandSC-Regular'),url(https://fonts.gstatic.com/s/patrickhandsc/v4/OYFWCgfCR-7uHIovjUZXsZ71Uis0Qeb9Gqo8IZV7ckE.woff2) format('woff2');
  unicode-range: U+0100-024f,U+1-1eff,U+20a0-20ab,U+20ad-20cf,U+2c60-2c7f,U+A720-A7FF;
}

@keyframes animation-i9f7qw-bounce {
  from, 20%, 53%, 80%, to {
    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    transform: translate3d(0, 0, 0);
  }

  40%, 43% {
    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
    transform: translate3d(0, -30px, 0);
  }

  70% {
    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
    transform: translate3d(0, -15px, 0);
  }

  90% {
    transform: translate3d(0, -4px, 0);
  }
}

.no-prefix {
  display: flex;
  justify-content: center;
}

.css-fgjrlg-hoverStyles-Something_Main {
  color: hotpink;
  display: flex;
}

.css-fgjrlg-hoverStyles-Something_Main:hover {
  color: white;
  background-color: lightgray;
  border-color: aqua;
  box-shadow: -15px -15px 0 0 aqua,-30px -30px 0 0 cornflowerblue;
}",
  "html": <main class="css-fgjrlg-hoverStyles-Something_Main">
  <div>
    Hello
  </div>
</main>,
  "ids": [
    "1uqawbr",
    "i9f7qw-bounce",
    "1nhdffy",
    "fgjrlg-hoverStyles-Something_Main",
  ],
}
`;

exports[`hydration only rules that are not in the critical css are inserted 1`] = `
{
  "css": "@font-face {
  font-family: 'Patrick Hand SC';
  font-style: normal;
  font-weight: 400;
  src: local('Patrick Hand SC'),local('PatrickHandSC-Regular'),url(https://fonts.gstatic.com/s/patrickhandsc/v4/OYFWCgfCR-7uHIovjUZXsZ71Uis0Qeb9Gqo8IZV7ckE.woff2) format('woff2');
  unicode-range: U+0100-024f,U+1-1eff,U+20a0-20ab,U+20ad-20cf,U+2c60-2c7f,U+A720-A7FF;
}

@keyframes animation-i9f7qw-bounce {
  from, 20%, 53%, 80%, to {
    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    transform: translate3d(0, 0, 0);
  }

  40%, 43% {
    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
    transform: translate3d(0, -30px, 0);
  }

  70% {
    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
    transform: translate3d(0, -15px, 0);
  }

  90% {
    transform: translate3d(0, -4px, 0);
  }
}

.no-prefix {
  display: flex;
  justify-content: center;
}

.css-fgjrlg-hoverStyles-Something_Main {
  color: hotpink;
  display: flex;
}

.css-fgjrlg-hoverStyles-Something_Main:hover {
  color: white;
  background-color: lightgray;
  border-color: aqua;
  box-shadow: -15px -15px 0 0 aqua,-30px -30px 0 0 cornflowerblue;
}

.css-1h1w8ez-Image {
  animation: animation-i9f7qw-bounce;
  border-radius: 50%;
  height: 50px;
  width: 50px;
  background-color: red;
}",
  "html": <main class="css-fgjrlg-hoverStyles-Something_Main">
  <img size="30"
       class="css-1h1w8ez-Image"
  >
  <img size="100"
       class="css-1h1w8ez-Image"
  >
  <img class="css-1h1w8ez-Image">
</main>,
  "ids": [
    "1uqawbr",
    "i9f7qw-bounce",
    "1nhdffy",
    "fgjrlg-hoverStyles-Something_Main",
    "1h1w8ez-Image",
  ],
}
`;

exports[`hydration only rules that are not in the critical css are inserted 2`] = `
".css-v31heb-hoverStyles {
  color: hotpink;
}

.css-v31heb-hoverStyles:hover {
  color: white;
  background-color: lightgray;
  border-color: aqua;
  box-shadow: -15px -15px 0 0 aqua,-30px -30px 0 0 cornflowerblue;
}

.css-k26awr {
  display: none;
}"
`;
